TAG: lib_java_dbsmgd-gtlf-4
DATE: 06/23/2009
STAFF: sc
CHANGES: TR7493 - Post Dev Build 5
1) PubMedIDLookupByAlleleKey- added "order by _Allele_key" to query

TAG: lib_java_dbsmgd-gtlf-3
DATE: 06/18/2009
STAFF: sc
CHANGES: TR7493
1) Several lookups added to support genetrapload

TAG: lib_java_dbsmgd-gtlf-2
DATE: 03/13/2009
STAFF: sc
CHANGES: 
1) Added MGINoteTypeConstants.java
2) Added ALLELE_SEQUENCE to MGIRefAssocTypeConstants.java
3) AccessionLookup.java - removed throw of KeyNotFound (i.e. not thrown)
4) CoordMapFeatureLookup - updated comments

TAG: lib_java_dbsmgd-gtlf-1
DATE: 01/21/2009
STAFF: sc
CHANGES: additions to constants files and generatedTables.txt

TAG: lib_java_dbsmgd-gtlf-BP
DATE: 01/21/2009
STAFF: sc
CHANGES: Branch point tag for GT LF

TAG: lib_java_dbsmgd-4-1-2-2
DATE: 09/11/2008
STAFF: jmason
CHANGES: add tables required for the targeted allele load (TR 8524)

TAG: lib_java_dbsmgd-4-1-2-1
DATE: 09/11/2008
STAFF: jmason
CHANGES: add tables required for the targeted allele load (TR 8524)

TAG: lib_java_dbsmgd-4-0-0-1
DATE: 05/07/2008
STAFF: sc
CHANGES: merge tr7493 branch (egload)

TAG: lib_java_dbsmgd-tr8543-BP
DATE: 03/26/2008
STAFF: sc
CHANGES: Build 37 Branch Point - this branch point tag is no longer
needed, its changes are included in the tr7493 branch

TAG: lib_java_dbsmgd-tr7493-3
DATE: 04/15/2008
STAFF: sc
CHANGES:
1) removed SeqIdsByMarkerIdLookup, added SeqIdsByMarkerKeyLookup

TAG: lib_java_dbsmgd-tr7493-2
DATE: 03/31/2008
STAFF: sc
CHANGES:
1) SeqIdsByMarkerIdLookup (egload)

TAG: lib_java_dbsmgd-tr7493-1
DATE: 01/29/2008
STAFF: sc
CHANGES:
1) CoordMapCollectionKeyLookup - updated to return null rather than 
    exception upon failed lookup (not in MGI)
2) CoordMapFeatureKeyLookup, CoordMapFeatureLookup - added

TAG: lib_java_dbsmgd-tr7493-BP
DATE: 01/28/2008
STAFF: sc
CHANGES: Gene Traps Less Filling Branch Point

TAG: lib_java_dbsmgd-3-5-1-2
DATE: 11/14/2006
STAFF: lec
CHANGES: TR8001: TIGR to DFCI

TAG: lib_java_dbsmgd-3-5-1-1